Fix modal bg on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -226,7 +226,7 @@ textarea {
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.9);
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
 
